[tool.poetry]
name = "vpc-creator"
version = "0.1.0"
description = "Application to automate the creation of a VPC in AWS"
authors = ["Peter Han <git@peterhan.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.8"

[tool.poetry.scripts]
vpc-creator = "vpc_creator:main"
